# rtl_core

./: .gitignore  Makefile  README.md  pyproject.toml  spi.v
.github/workflow/: verilog_test.yml
.github/workflows/: verilog_test.yml
cordic/: Makefile  atan_table.py  cordic.md  cordic.v  cordic_tb.py  test_cordic.py
counter/: Makefile  counter.md  counter.v  counter_tb.v  readme.toml  test_counter.py
decimator/: Makefile  decimator.v  test_decimator.py
dff/: dff.py  dff.v  dff.vhd  pck_myhdl_011.vhd  test_dff.py
johnson_counter/: jc2.v  jc2.vhd  johnson_counter.py  pck_myhdl_011.vhd  tb_jc2.v  test_johnson_counter.py
sigma_delta_2/: Makefile  sigma_delta_2.v  sigma_delta_2_tb.v  test_sigma_delta_2.py
spi_device/: Makefile  spi_device_tb.py  spi_device_tb.v  test_spi.py  test_spi_device.py
