[tool.poetry]
name = "rtl-core"
version = "0.1.0"
description = "Simple *Tested* Verilog Module."
authors = ["Patarimi <mpqqch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rtl_core"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
cocotb = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
