[tool.poetry]
name = "rtl-core"
version = "0.1.0"
description = "Simple *Tested* Verilog Module."
authors = ["Patarimi <mpqqch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rtl_core"}]

[tool.poetry.dependencies]
python = "^3.8"
myhdl = "^0.11"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
cocotb = "^1.8.0"
cocotb-test = {git = "https://github.com/themperek/cocotb-test.git"}
pytest = "^7.4.2"
pytest-sugar = "^0.9.7"
poethepoet = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
